Fix gap on collapse label

--- a/apps/web/styles/_sidebar.scss
+++ b/apps/web/styles/_sidebar.scss
@@ -174,6 +174,7 @@
 
   label[for='sidebar-toggle'] {
     cursor: pointer;
+    gap: 0;
 
     i::before {
       content: '\f054';
